# OZ-sample-repo

./: .gitignore  Cargo.toml  README-WIZARD.md
contracts/fungible/: Cargo.toml
contracts/fungible/src/: contract.rs  test.rs
